kube-apiserver-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    component: kube-apiserver
  ports:
    - name: https
      port: 6443
      targetPort: 6443
